public/stylesheets/style.css
/* ... */
.prop_sub a:hover, .prop_sub a:active{
	text-decoration: underline;
	color: #da3546;
	background-color: #ffffff;
}

a.prop_link:link, a.prop_link:visited{
	color: #da3546;
	text-decoration: none;
	font-size: 12px;
}

a.prop_link:hover, a.prop_link:active{
	text-decoration: underline;
	background-color: #ffffff;
}



.thumb{
	border: 0 !important;
}

.organizer{
	-moz-border-radius:8px 8px 8px 8px;
	border:3px solid #B24450;
	left:42px;
	position:absolute;
	top:490px;
}

#left_bar{
	float: left;
  margin-bottom: 20px;
}


.event_listed {
	background:url("/images/event_big_bg.png") repeat scroll 0 0 transparent;
  width: 960px;
  height: 133px;
  margin-bottom: 20px;
}

.event_listed p {
	font-size: 12px;
}

.event_listed h1 a {
  color: #DA3546;
}
.event_listed h1 a:hover {
  background-color: white;
}

.event_listed h1 {
  padding-top: 15px;
  padding-bottom: 5px;
  font-size: 19px;
}

.event_status {
  color: #414141;
  float: right;
  padding: 15px 15px 0 0;
}

.event_desc {
  width: 30%;
  float: left;

}

.event_status span {
  font-size: 5em;
  font-weight: bold;
  letter-spacing: -2px;
  width: 10px;
  margin-right: -5px;
  margin-left: 15px;
}

#events_list {
	margin-top:67px;
	position:relative;
	float: left;
}

#events_list .create_button {
  float:right;
  margin-bottom: 15px;
}


.logo_small {
  border: 5px solid #B24450;
  float: left;
  margin: 20px;
  border-bottom-left-radius: 15px 15px;
  border-bottom-right-radius: 15px 15px;
  border-top-left-radius: 15px 15px;
  border-top-right-radius: 15px 15px;
}


.comments_list{
	background:url("/images/comment_it.png") repeat scroll 0 0 transparent;
	left:80px;
	margin-bottom:10px;
	min-height:110px;
	position:relative;
	width:512px;
	padding: 20px;
}

.comments_list p{
	font-size: 14px;
	color: #111111;
}

.comments_list img{
	-moz-border-radius:8px;
	-webkit-border-radius:8px;
  border-radius: 8px;
	border: 5px solid #b24450;
	float: left;
	margin-right: 10px;
}

.comments_list p small{
	font-size: 12px;
	color: #da3546;
	font-weight: bold;
}

.comments_list p spam{
	font-size: 12px;
	color: #da3546;
}

#comment_new form .field textarea{
	border:2px solid #111111;
	height:50px;
	padding:3px;
	width:427px;
}

#comment_new{
	background:url("/images/comment_it.png") repeat scroll 0 0 transparent;
	padding: 20px;
	margin-bottom: 10px;
	width: 512px;
	position: relative;
	left: 80px;
}

#new_item h1 {
  font-size: 32px;
  letter-spacing: -2px;
  font-weight: bold;
  margin-bottom: 20px;
}
#new_item h2 {
  font-size: 14px;
}

#new_item h3 {
	color: #da3546;
  font-weight: bold;
  font-size: 14px;
  margin-bottom: 10px;
}

#new_item .title {
  display: block;
  margin-bottom: 40px;
}

#login_container {
  width: 800px;
  margin: auto;
}
#login_container .old_school {
  border-right: 2px dotted #bababa;
  padding-right: 50px;
  margin-right: 50px;
  margin-bottom: 20px;
  float: left;
}


#new_item {
	margin-top:67px;
	position:relative;
	float: left;
  width: 100%;
}

#new_item input[type=text]:focus,
#new_item input[type=password]:focus,
#new_item textarea:focus {
  outline: none;
  border-color: #bababa;
}

#new_item .remember {
  font-size: 12px;
}

#new_item .actions,
#new_item .field {
  clear: both;
}

#new_item input[type=text],
#new_item input[type=password],
#new_item select, #new_item textarea {
	background:url("/images/textinputbg.gif") repeat-x scroll 0 0 #FFFFFF;
	border:1px solid #D3D3D3;
	color:#000000;
	font-size:12px;
	margin-bottom:10px;
	padding:7px 0;
	text-indent:7px;
	width:400px;
  float: left;
}

#new_item input[type=text].error,
#new_item input[type=password].error,
#new_item select.error, #new_item textarea.error {
	background:url("/images/textinputbg-error.gif") repeat-x scroll 0 0 #FFDFDF;
}

#new_item label.error {
  float: left;
  margin: 10px;
  color: #f00;
}
#new_item #login_container label.error {
  float: none;
  display: block;
}

#new_item input[type=image] {
  margin: 10px 0;
}

#new_item textarea {
  	height: 200px;
	width: 400px;
}

#new_item label {
  font-size: 14px;
}

.devise_links {
  margin: 10px 0;
}

.devise_links a {
  font-size: 12px;
}

#footer_a p{
	line-height:1.3;
}

.field label{
	font-weight: bold;
	font-size: 12px !important;
}

.vermelho{
	color: #da3546;
}

.datepicker{
	appendText: '(yyyy-mm-dd)';
}

.event_stat p.name{
	font-size: 14px;
	color: #111111;
	font-weight: bold;
}

.yet{
	font-size: 14px;
	color: #111111;

}

.event_stat p.name spam{
	font-size: 14px;
	color: #da3546;
	font-weight: bold;
}

.proposals_stat{
	position: relative;
	left: 20px;
}

.proposals_stat p.list{
	font-size: 14px;
	color: #111111;
	font-weight: bold;
	margin-bottom: 5px;
}

.prop_stat	p{
	font-size: 12px;
	color: #111111;
}

#composicao {
  font: 9pt Arial, Helvetica, sans-serif;
  width: 100%;
  border-collapse: collapse;
}

#composicao caption {
  font-weight: bold;
}

#composicao tfoot tr {
  border: solid 1px #333333;
}

#composicao tfoot td {
  color: #ffffff;
  padding: 5px;
  background: #999999;
}

#composicao tr.alt td {
  background: #CCCCCC;
}

#composicao tbody td,
#composicao th {
  padding: 5px;
  border: solid 1px #333333;
}

#composicao th {
  color: #DCDCDC;
  background: #666666;
}

#event_social{
	left:105px;
	position:absolute;
	top:498px;}

#tweeting{
	color: #ffffff;
	padding: 10px;
	font-size: 12px;
	background-color: #111111;
	cursor:pointer;
	right: 40px;
	bottom: 0px;
	height:40px;
	position:fixed;
	width:118px;
	border-color:black;
	-moz-border-radius:8px 8px 0px 0px;
	-webkit-border-radius:8px 8px 0px 0px;
}

#tweeting #tw{
	display: inline;
	position: relative;
	top: 7px;
}

.comment_detail:link, .comment_detail:visited{
	color:#FFFFFF !important;
	font-size:12px;
	font-weight:bold;
}

a.logo_c4p img{
	margin-left:27px;
	margin-top:24px;
}

